fix responsiveness for mobile screen

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <section class="journal-entry-modal hidden">
+      <section class="journal-entry-modal">
         <h1 class="journal-entry-title"><i class="fas fa-pen-alt"></i> New Log</h1>
         <div class="journal-content">
           <div>
@@ -121,7 +121,7 @@
         </div>
       </section>
 
-      <section class="journal-detail-container hidden">
+      <section class="journal-detail-container">
           <h1 class="journal-detail-container-title"><i class="fas fa-book-open"></i> Journal Title</h1>
         <div class="journal-top-content">
             <p class="journal-detail-title">Title <i class="fas fa-heading"></i> : <span>Great Day!</span></p>
