--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </section>
 
       <section class="journal-list-body">
-        <!-- <div class="journal-list-container">
-          <div class="journal-list">
+        <div class="journal-list-container" id="journal-list-container">
+          <!-- <div class="journal-list">
             <div class="journal-title">
               <h2><i class="fas fa-bookmark"></i> "Great Day!"</h2>
             </div>
@@ -57,31 +57,8 @@
             </div>
             <h3><i class="fas fa-align-left"></i> First 5 words in the journal data</h3>
           </div>
-          <div class="journal-list">
-            <div class="journal-title">
-              <h2><i class="fas fa-bookmark"></i> "Great Day!"</h2>
-            </div>
-            <div class="journal-mood">
-              <p>Vibe <i class="fas fa-heart"></i> : <span>Happy</span> <i class="fas fa-smile-beam"></i> </p>
-            </div>
-            <div class="timestamp">
-              <p>Posted <i class="far fa-clock"></i> : <span>2025-05-04 14:32</span></p>
-            </div>
-            <h3><i class="fas fa-align-left"></i> First 5 words in the journal data</h3>
-          </div>
-          <div class="journal-list">
-            <div class="journal-title">
-              <h2><i class="fas fa-bookmark"></i> "Great Day!"</h2>
-            </div>
-            <div class="journal-mood">
-              <p>Vibe <i class="fas fa-heart"></i> : <span>Happy</span> <i class="fas fa-smile-beam"></i> </p>
-            </div>
-            <div class="timestamp">
-              <p>Posted <i class="far fa-clock"></i> : <span>2025-05-04 14:32</span></p>
-            </div>
-            <h3><i class="fas fa-align-left"></i> First 5 words in the journal data</h3>
-          </div>
-        </div> -->
+          -->
+        </div>
         <div class="add-entry-button">
           <p>
             How are you feeling today? Journal it out!
@@ -103,18 +80,20 @@
               <label for="journal-entry-title"
                 >Title <i class="fas fa-heading"></i> :
                 <input
-                name="journal-entry-title"
+                  name="journal_detail_title"
                   id="journal-detail-title"
                   type="text"
                   placeholder="Today was..."
               /></label>
               <label for="journal-mood-dropdown">
                 Vibe <i class="fas fa-heart"></i> :
-                <select name="journal-mood-dropdown" id="journal-mood-dropdown">
+                <select name="journal_mood_dropdown" id="journal-mood-dropdown">
                   <option value="happy">
                     Happy <i class="fas fa-smile-beam"></i>
                   </option>
-                  <option value="sad">Sad <i class="far fa-sad-tear"></i></option>
+                  <option value="sad">
+                    Sad <i class="far fa-sad-tear"></i>
+                  </option>
                   <option value="motivated">
                     Motivated <i class="fas fa-fire"></i>
                   </option>
@@ -131,7 +110,7 @@
               <label for="journal-entry-textarea">
                 Content <i class="fas fa-align-left"></i> :
                 <textarea
-                name="journal-entry-textarea"
+                  name="journal_entry_textarea"
                   id="journal-entry-textarea"
                   placeholder="Dear Mood Log..."
                 ></textarea>
@@ -139,7 +118,9 @@
             </div>
           </div>
           <div class="journal-entry-buttons">
-            <button type="submit">Save Entry <i class="fas fa-save"></i></button>
+            <button type="submit">
+              Save Entry <i class="fas fa-save"></i>
+            </button>
             <button type="button" id="hide-journal-entry-modal">
               Cancel <i class="fas fa-times"></i>
             </button>
@@ -147,7 +128,10 @@
         </form>
       </section>
 
-      <section class="journal-detail-container hidden" id="journal-detail-container">
+      <section
+        class="journal-detail-container hidden"
+        id="journal-detail-container"
+      >
         <h1 class="journal-detail-container-title">
           <i class="fas fa-book-open"></i> Journal Title
         </h1>
