add functionality to populate the journal detail modal

--- a/index.html
+++ b/index.html
@@ -132,18 +132,15 @@
         class="journal-detail-container hidden"
         id="journal-detail-container"
       >
-        <h1 class="journal-detail-container-title">
+        <!-- <h1 class="journal-detail-container-title">
           <i class="fas fa-book-open"></i> Journal Title
         </h1>
         <div class="journal-top-content">
-          <p class="journal-detail-title">
-            Title <i class="fas fa-heading"></i> : <span>Great Day!</span>
-          </p>
-          <p class="journal-detail-title">
+          <p class="journal-detail-mood">
             Vibe <i class="fas fa-heart"></i> : <span>Happy</span>
             <i class="fas fa-smile-beam"></i>
           </p>
-          <p class="journal-detail-title">
+          <p class="journal-detail-timestamp">
             Time <i class="far fa-clock"></i> : <span>2025-05-04 14:32</span>
           </p>
         </div>
@@ -162,7 +159,7 @@
           <button id="back-to-list-button">
             Back to List <i class="fas fa-arrow-left"></i>
           </button>
-        </div>
+        </div> -->
       </section>
     </main>
     <script type="module" src="./scripts/ui.js"></script>
