implemented search functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Search <i class="fas fa-search"></i> :
             <input
               type="text"
-              id="search"
+              id="search-input"
               placeholder="What should I remind you of"
             />
           </label>
